add return calculation function

--- a/Final Report/Final Report.ipynb
+++ b/Final Report/Final Report.ipynb
@@ -31,7 +31,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 60 s\n"
+      "Wall time: 51 s\n"
      ]
     }
    ],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 84,
    "metadata": {
     "scrolled": false
    },
@@ -156,150 +156,144 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 9.79 s\n"
+      "Wall time: 8.05 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "test = selected_company(data=data, num_selected=10, by='MV', ascending=True, least_volume=10, trade_mode='A')"
+    "test = selected_company(data=data, num_selected=10, by='MV', ascending=True, least_volume=10, trade_mode=\"A\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "test_date = test.Date.unique()[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "100000 / "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0     1.11\n",
-       "1     0.66\n",
-       "2     4.30\n",
-       "3     3.17\n",
-       "4     2.83\n",
-       "5    89.46\n",
-       "6     3.49\n",
-       "7    11.28\n",
-       "8    25.95\n",
-       "9     9.91\n",
-       "Name: Close, dtype: float64"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test[test.Date == test_date][\"Close\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "temp = data[data.Date == data.Date.unique()[0]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(temp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    0.046942\n",
-       "1    0.063300\n",
-       "2    0.064723\n",
-       "3    0.073257\n",
-       "4    0.089616\n",
-       "5    0.109531\n",
-       "6    0.124467\n",
-       "7    0.137269\n",
-       "8    0.145092\n",
-       "9    0.145804\n",
-       "Name: MV, dtype: float64"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temp.MV / temp.MV.sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def calculate_return(data, weight_mode = \"equal\"):\n",
+    "def calculate_return(data, weight_mode = \"equal\", initial_capital = 10000):\n",
     "    \n",
     "    for date in data.Date.unique():\n",
     "        temp = data[data.Date == date]\n",
     "        \n",
     "        if weight_mode == \"equal\":\n",
-    "            weight_array = [1/len(temp)] * 10\n",
-    "        if weight_mode == \"MV\":\n",
-    "            weight_array = temp.MV / temp.MV.sum()\n",
+    "            weight_array = np.array([1/len(temp)] * len(temp))\n",
+    "        if weight_mode == \"MV_based\":\n",
+    "            weight_array = np.array(temp.MV / temp.MV.sum())\n",
     "            \n",
-    "        "
+    "        temp_return =  ((temp.Close_out - temp.Close) / temp.Close + 1)\n",
+    "        capital_allocation = initial_capital * weight_array\n",
+    "        initial_capital = np.dot(capital_allocation, temp_return)\n",
+    "        print(capital_allocation, initial_capital)\n",
+    "        \n",
+    "    return initial_capital"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  469.41678521   633.00142248   647.22617354   732.57467994   896.15931721\n",
+      "  1095.30583215  1244.66571835  1372.68847795  1450.92460882  1458.03698435] 2191.96430625\n",
+      "[ 114.11994915  178.71614678  180.86935336  228.23989829  232.54631147\n",
+      "  234.69951806  243.31234441  254.07837735  258.38479052  266.99761687] 4531.41205396\n",
+      "[ 179.79375332  255.9775471   356.54015488  380.91896889  393.1083759\n",
+      "  499.76568719  563.76007396  585.09153622  652.13327475  664.32268175] 6428.4802812\n",
+      "[ 390.39353934  427.98699128  615.95425097  650.65589891  650.65589891\n",
+      "  708.49197881  708.49197881  743.19362675  754.76084273  777.89527469] 1084.36975102\n",
+      "[  78.5233268    84.399222     99.35604615  100.42439073  106.83445823\n",
+      "  114.8470426   115.38121489  126.06466071  126.598833    131.94055591] 927.083147861\n",
+      "[  58.58440739   62.81214813   73.0795185    91.80237034   94.21822219\n",
+      "   97.84199997  111.12918515  111.73314811  112.33711108  113.545037  ] 1118.68491739\n",
+      "[  50.08026853   80.53448589   83.24152743   99.48377668  110.31194285\n",
+      "  119.78658825  134.67531673  140.08939982  147.53376406  152.94784714] 2327.94653917\n",
+      "[ 103.41922779  142.9618737   146.0036157   146.0036157   166.28189566\n",
+      "  294.03505939  310.25768336  323.43856533  340.67510329  354.86989926] 401.052866076\n",
+      "[ 30.79272844  33.18439667  35.87502343  39.16356724  41.854194\n",
+      "  42.15315253  42.90054885  44.84377929  44.99325855  45.29221708] 323.979940589\n",
+      "[ 17.82664745  18.29169043  32.08796541  32.70802271  33.32808001\n",
+      "  33.79312299  38.28853843  38.59856708  38.75358141  40.30372467] 216.493066468\n",
+      "[  7.52885753  15.59549059  19.05261905  22.27927228  23.35482335\n",
+      "  24.43037443  24.96814997  25.96687596  26.58147658  26.73512673] 244.306576839\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "244.30657683872323"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_return(test, weight_mode='MV_based')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1000.  1000.  1000.  1000.  1000.  1000.  1000.  1000.  1000.  1000.] 1696.46703523\n",
+      "[ 169.64670352  169.64670352  169.64670352  169.64670352  169.64670352\n",
+      "  169.64670352  169.64670352  169.64670352  169.64670352  169.64670352] 3212.73475426\n",
+      "[ 321.27347543  321.27347543  321.27347543  321.27347543  321.27347543\n",
+      "  321.27347543  321.27347543  321.27347543  321.27347543  321.27347543] 3321.70480582\n",
+      "[ 332.17048058  332.17048058  332.17048058  332.17048058  332.17048058\n",
+      "  332.17048058  332.17048058  332.17048058  332.17048058  332.17048058] 513.73600247\n",
+      "[ 51.37360025  51.37360025  51.37360025  51.37360025  51.37360025\n",
+      "  51.37360025  51.37360025  51.37360025  51.37360025  51.37360025] 456.93468084\n",
+      "[ 45.69346808  45.69346808  45.69346808  45.69346808  45.69346808\n",
+      "  45.69346808  45.69346808  45.69346808  45.69346808  45.69346808] 559.440645398\n",
+      "[ 55.94406454  55.94406454  55.94406454  55.94406454  55.94406454\n",
+      "  55.94406454  55.94406454  55.94406454  55.94406454  55.94406454] 1103.24051468\n",
+      "[ 110.32405147  110.32405147  110.32405147  110.32405147  110.32405147\n",
+      "  110.32405147  110.32405147  110.32405147  110.32405147  110.32405147] 172.327436486\n",
+      "[ 17.23274365  17.23274365  17.23274365  17.23274365  17.23274365\n",
+      "  17.23274365  17.23274365  17.23274365  17.23274365  17.23274365] 141.17839892\n",
+      "[ 14.11783989  14.11783989  14.11783989  14.11783989  14.11783989\n",
+      "  14.11783989  14.11783989  14.11783989  14.11783989  14.11783989] 84.6567035899\n",
+      "[ 8.46567036  8.46567036  8.46567036  8.46567036  8.46567036  8.46567036\n",
+      "  8.46567036  8.46567036  8.46567036  8.46567036] 89.0944474363\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "89.0944474362976"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_return(test, weight_mode='equal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
