add calculation result

--- a/Final Report/Final Report.ipynb
+++ b/Final Report/Final Report.ipynb
@@ -9,7 +9,17 @@
    "outputs": [],
    "source": [
     "from main_strategy import *\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "plt.style.use('seaborn')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Preprocess"
    ]
   },
   {
@@ -21,12 +31,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1min 9s\n"
+      "Wall time: 1min 7s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
+    "#load data\n",
     "data = pd.read_csv(\"data.csv\", low_memory=False)\n",
     "data.columns = [\"Code\", \"Company\", \"Industry\", \"Date\", \"Open\", \"High\", \"Low\", \"Close\", \"Volume\", \"MV\", \"PB\"]\n",
     "data.Date = data.Date.apply(lambda x : datetime.strptime(x, \"%Y/%m/%d\"))\n",
@@ -34,7 +45,7 @@
     "#find which years included in data\n",
     "data_year = data.Date.apply(lambda x : x.year).unique()\n",
     "\n",
-    "#find unique trading date in data\n",
+    "#find unique trading dates in data\n",
     "data_date = pd.DataFrame(data.Date.unique(), columns = [\"Date\"])\n",
     "\n",
     "#find first trading date for each year, these dates will be used as entry points/exit points during backtesting\n",
@@ -45,6 +56,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Backtest"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
@@ -52,76 +70,90 @@
    },
    "outputs": [],
    "source": [
-    "from test import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#instantiate strategy object\n",
     "main = strategy(data, data_year, data_date, first_date_each_year)"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MV_True_A_equal...finished\n",
+      "MV_True_A_MV_based...finished\n",
+      "MV_True_B_equal...finished\n",
+      "MV_True_B_MV_based...finished\n",
+      "MV_True_C_equal...finished\n",
+      "MV_True_C_MV_based...finished\n",
+      "MV_False_A_equal...finished\n",
+      "MV_False_A_MV_based...finished\n",
+      "MV_False_B_equal...finished\n",
+      "MV_False_B_MV_based...finished\n",
+      "MV_False_C_equal...finished\n",
+      "MV_False_C_MV_based...finished\n",
+      "PB_True_A_equal...finished\n",
+      "PB_True_A_MV_based...finished\n",
+      "PB_True_B_equal...finished\n",
+      "PB_True_B_MV_based...finished\n",
+      "PB_True_C_equal...finished\n",
+      "PB_True_C_MV_based...finished\n",
+      "PB_False_A_equal...finished\n",
+      "PB_False_A_MV_based...finished\n",
+      "PB_False_B_equal...finished\n",
+      "PB_False_B_MV_based...finished\n",
+      "PB_False_C_equal...finished\n",
+      "PB_False_C_MV_based...finished\n",
+      "Wall time: 2h 38min 38s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "#given least volume = 10, initial_capital = 100, transaction_cost = 0.00585\n",
+    "#there are five parameters \"num_selected\", \"by\", \"ascending\", \"trade_mode\", \"weight_mode\",\n",
+    "#these parameters have 20, 2, 2, 3, 2 choices sequentially, \n",
+    "#as a result, there are 20*2*2*3*2 or 480 results during backtesting, \n",
+    "#each result contain [remain capital, return] according to differnt parameters\n",
+    "\n",
+    "num_selected = np.arange(5, 105, 5)\n",
+    "by = [\"MV\", \"PB\"]\n",
+    "ascending = [True, False]\n",
+    "trade_mode = [\"A\", \"B\", \"C\"]\n",
+    "weight_mode = [\"equal\", \"MV_based\"]\n",
+    "\n",
+    "result= {}\n",
+    "result_temp = []\n",
+    "for by_i in by:\n",
+    "    for ascending_i in ascending:\n",
+    "        for trade_mode_i in trade_mode:\n",
+    "            for weight_mode_i in weight_mode:\n",
+    "                for num_selected_i in num_selected:\n",
+    "                    temp = main.calculate_return(by = by_i, ascending = ascending_i, \n",
+    "                                                 trade_mode = trade_mode_i, weight_mode = weight_mode_i, \n",
+    "                                                 num_selected = num_selected_i)\n",
+    "                    result_temp.append(temp)\n",
+    "\n",
+    "                result[\"{}_{}_{}_{}\".format(by_i, ascending_i, trade_mode_i, weight_mode_i)] = result_temp\n",
+    "                result_temp = []\n",
+    "                print(\"{}_{}_{}_{}\".format(by_i, ascending_i, trade_mode_i, weight_mode_i)+\"...finished\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "89.0944474362976"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "main.calculate_return(trade_mode='A')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "72752.873753842417"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "main.calculate_return(trade_mode='B')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "70114.403384867459"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "main.calculate_return(trade_mode='C')"
+    "np.save('result.npy', result) \n",
+    "#result_test = np.load('result.npy').item()"
    ]
   }
  ],
