--- a/Final Report/Analysis.ipynb
+++ b/Final Report/Analysis.ipynb
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# In this section, we will discuss how these parameter affect return:\n",
+    "## In this section, we will discuss how these parameter affect return:\n",
     "1. **\"by\"** : select stocks by MV(Market Value) or by PB(Price to Book ratio).\n",
     "2. **\"ascending\"** : select stocks according to \"by\", in ascending(select smallest) or descending(select biggest) way.\n",
     "3. **\"trade_mode\"** : 3 trade modes, \"A\", \"B\", \"C\" are provided. During backtesting if certain stock don't meet the requirement of least trade volume, then code itself will set exit price to different value according to appointed trade mode. Exit price will be set = 0, = entry price, = price at exit point(regardless of low liquidity) sequentially in \"A\", \"B\", \"C\" mode.\n",
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Given \"by = MV\", and \"trade_mode = C\""
+    "#### Given \"by = MV\", and \"trade_mode = C\""
    ]
   },
   {
@@ -133,22 +133,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "#未考量嚴格進出場條件時報酬很高(但可能看的到吃不到)\n",
-    "#在小型股中當portfolio個股數量小於50時，加權組成較好，50之後平均組成較好"
+    "1. We can find that portfolios formed by smallest market value companies perform very well(over 300% or even 1300% according to different number of stocks selected each years) in both equal-weights and market-value based weights. However, trade mode \"C\" is a loose condtion, it won't consider trade volume while exiting the trade, even stocks holden didn't have any trade volume on exit point(maybe 0), during backtesting we still assume those stocks could be sold by existing price on that point(day). It seems quite unrealistic, but it's the only way to find the best result from backtesting. As a result, the conclusion from *It has been very easy to beat the S&P500 in 2000-2018* might be done without considering the trade volume on exit point(author didn't mention any things about trade volume in his paper). It means that on theory, our portfolios formed by small market value companies can bring huge return. However, on realistic we can't enjoy the huge return because we couldn't sell those stocks so as to gain return. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Given \"by = MV\", and \"trade_mode = A\" "
+    "#### Given \"by = MV\", and \"trade_mode = A\" "
    ]
   },
   {
